(lang dune 2.4)
(using menhir 2.1)

(name txForest)
(version 0.2)

(generate_opam_files true)

(source (github cornell-pl/TxForest))
(license MIT)
(authors "Jonathan DiLorenzo" "Katie Mancini")
(maintainers "dilorenzo@cs.cornell.edu")

(package
  (name txForest)
  (synopsis "An OCaml library for Processing Ad Hoc Filestores")
  (description 
    "    TxForest is a embedded domain-specific language in OCaml for
    processing Ad Hoc Filestores. See the github repository for some
    additional details. See papers on Forest, Incremental Forest, and
    TxForest (the last of which is this library) for more in-depth
    details.
    "
  )
  (depends
    ("async" (>= "v0.12.0"))
    ("core" (>= "v0.12.0"))
    ("dune" (and :build (>= "2.4")))
    ("ocaml" (>= "4.10"))
    ("menhir" (>= "20200211"))
    ("ppx_deriving" (>= "4.4.1"))
    ("ppx_deriving_yojson" (>= "3.5.2"))
  )
)