(library
  (public_name forest)
  (name forest)
  (flags (:standard -w -32 -g))
  (libraries core re str rawforest)
  (preprocess (pps ppx_deriving.show ppx_deriving.make ppx_jane))
  (modules ForestIntf)
)

(executable
  (name forestServer)
  (public_name forestServer)
  (flags (:standard -g))
  (libraries core async rawforest forest)
  (preprocess (pps ppx_jane))
  (modules ForestServer)
  (package forest)
)

(executable
  (name forestClient)
  (public_name forestClient)
  (flags (:standard -g))
  (libraries core async rawforest forest)
  (preprocess (pps ppx_jane ppx_forest))
  (modules ForestClient)
  (package forest)
)

; make add Utils, EvalForest private -> both needed for typing
; the ppxed files rn, maybe could expose some of the things
; needed in ForestIntf, so that these can be made private