(library
  (public_name forest)
  (name forest)
  (flags (:standard -w -32))
  (libraries core re str)
  (preprocess (pps ppx_deriving.show ppx_deriving.make ppx_jane))
  (private_modules Filesystems )
  (modules Utils PosixFilesystem UncommitedPosixFilesystem SimpleFilesystem Filesystems TxEvalForest EvalForest ForestIntf)
)

; make add Utils, EvalForest private -> both needed for typing
; the ppxed files rn, maybe could expose some of the things
; needed in ForestIntf, so that these can be made private