(executable
  (public_name testPpx)
  (name testPpx)
  (preprocess (pps ppx_jane ppx_txforest))
  (libraries core rawforest txForest str)
  (modules TestPpx)
  (package txForest)
)

(executable
  (public_name simpleEval)
  (name simpleEval)
  (preprocess (pps ppx_jane ppx_txforest))
  (libraries core rawforest txForest)
  (modules SimpleEval)
  (package txForest)
)

(executable
  (public_name simpleEvalSurf)
  (name simpleEvalSurf)
  (preprocess (pps ppx_jane ppx_txforest))
  (libraries core rawforest  txForest)
  (modules SimpleEvalSurf)
  (package txForest)
)

;(library
;  (name ExUtils)
;  (modules ExUtils)
;  (preprocess (pps ppx_jane))
;  (libraries core rawforest txForest)
;)
;
;(executable
;  (public_name grades)
;  (name grades)
;  (preprocess (pps ppx_jane))
;  (libraries core rawforest txForest ExUtils)
;  (modules Grades)
;  (package txForest)
;)
;
;(executable
;  (public_name shelter)
;  (name shelter)
;  (preprocess (pps ppx_jane))
;  (libraries core rawforest  txForest ExUtils)
;  (modules Shelter)
;  (package txForest)
;)

;(executable
;  (public_name shelterppx)
;  (name shelterppx)
;  (preprocess (pps ppx_jane ppx_txforest))
;  (libraries core rawforest  txForest ExUtils str)
;  (modules Shelterppx)
;  (package txForest)
;)

;(executable
;  (public_name simple)
;  (name simple)
;  (preprocess (pps ppx_jane))
;  (libraries core rawforest  txForest ExUtils)
;  (modules Simple)
;  (package txForest)
;)


;(executable
;  (public_name dependency)
;  (name dependency)
;  (preprocess (pps ppx_jane))
;  (libraries core rawforest txForest)
;  (modules Dependency)
;  (package txForest)
;)

;(env
;  (dev
;    (flags (:standard -warn-error -A))))
