(library
  (public_name txForest)
  (name txForest)
  (flags (:standard -w -32 -g))
  (libraries core re str rawforest)
  (preprocess (pps ppx_deriving.show ppx_deriving.make ppx_jane ppx_txforest))
  (modules ForestIntf)
)

(executable
  (name forestServer)
  (public_name forestServer)
  (flags (:standard -g))
  (libraries core async txForest)
  (preprocess (pps ppx_deriving.show ppx_deriving.make ppx_jane ppx_txforest))
  (modules ForestServer)
  (package txForest)
)

(executable
  (name forestClient)
  (public_name forestClient)
  (flags (:standard -g))
  (libraries core async txForest)
  (preprocess (pps ppx_deriving.show ppx_deriving.make ppx_jane ppx_txforest))
  (modules ForestClient)
  (package txForest)
)

; make add Utils, EvalForest private -> both needed for typing
; the ppxed files rn, maybe could expose some of the things
; needed in ForestIntf, so that these can be made private