(executable
  (public_name paper_ocaml)
  (name paperExOCaml)
  (preprocess (pps ppx_jane ppx_forest ppx_deriving_yojson ppx_deriving.eq))
  (libraries core)
  (modules PaperExOCaml)
  (package forest)
)

(executable
  (public_name paperEx)
  (name paperEx)
  (preprocess (pps ppx_jane ppx_forest ppx_deriving_yojson ppx_deriving.eq))
  (libraries core rawforest forest ppx_deriving_yojson.runtime)
  (modules PaperEx)
  (package forest)
)

(executable
  (public_name paperExOld)
  (name paperExOld)
  (preprocess (pps ppx_jane ppx_forest ppx_deriving_yojson ppx_deriving.eq))
  (libraries core rawforest forest ppx_deriving_yojson.runtime)
  (modules PaperExOld)
  (package forest)
)