(executable
  (public_name paper_ocaml)
  (name paperExOCaml)
  (preprocess (pps ppx_jane ppx_txforest ppx_deriving_yojson ppx_deriving.eq))
  (libraries core)
  (modules PaperExOCaml)
  (package txForest)
)

(executable
  (public_name paperEx)
  (name paperEx)
  (preprocess (pps ppx_jane ppx_txforest ppx_deriving_yojson ppx_deriving.eq))
  (libraries core rawforest txForest ppx_deriving_yojson.runtime)
  (modules PaperEx)
  (package txForest)
)

(executable
  (public_name paperExOld)
  (name paperExOld)
  (preprocess (pps ppx_jane ppx_txforest ppx_deriving_yojson ppx_deriving.eq))
  (libraries core rawforest txForest ppx_deriving_yojson.runtime)
  (modules PaperExOld)
  (package txForest)
)